Fix some general stuff